K8S/winning-test-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: winning-test
  labels:
    name: winning-test
