K8S/winninggroup-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: winninggroupnpservice-srv
spec:
  type: NodePort
  selector:
    app: winninggroupapiservice
  ports:
    - name: winninggroupapiservice
      protocol: TCP
      port: 80
      targetPort: 80
